2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b9

        * Typo: photoAlbumURL not photoAlbumUrl

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b8

        * Change: $adminCommands links now use CSS to prevent breaks in
          two-word links. (e.g. "[manage users]")

        * Change: Change 'one' to '1' to maintain consistancy

        * Change: Clear up to possible PHP notices for use_exif being
          unset.

	* Change: Add find_orphans to include list (from Tim)

	* Change: Correct config wizard link (from Tim)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b7

        * Change: Check the UserDB for consistancy before logging into
          the config wizard.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b6

        * Change: Incorrect variable assignment in view_album optimization
          could yield hidden photos viewable

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b5

        * Change: Center the block-random image, to match the text

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b4

        * Change: Update security message to mention secure.sh, and only
          appear on non-Windows OSes.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b3

        * Change: Logout with relative URLs would return a redirect error
          due to doubling of the photoAlbumUrl 

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b2

	* Change: Another case of relying on the submit button for a value,
	  but it's now disabled

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b1

	* Change: Check POST vars for $include before resetting to 'albums.php'

2004-07-10  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC1

	* v1.4.4 Release Candidate 1

2004-07-09  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b248

	* Fix: phpBB2 support for applets