@@ -1,3 +1,13 @@
+2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b10
+
+        * Change: Hidden images/albums could be *too* hidden (owner couldn't see them)
+
+        * Change: slideshow validation URL is based on whether you're looking at an
+          album, or the gallery-wide show.
+
+        * Typo: Another photoAlbumUrl -> photoAlbumURL
+          (so much for variables being case insensitive)
+
 2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b9
 
         * Typo: photoAlbumURL not photoAlbumUrl
